# hashtree-rs

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  MIGRATION_PLAN.md  PLAN-efficient-push.md  README.md
.claude/: agents.md
crates/git-remote-htree/: Cargo.toml  README.md
crates/git-remote-htree/benches/: git_storage.rs
crates/git-remote-htree/src/: config.rs  helper.rs  lib.rs  main.rs  nostr_client.rs
crates/git-remote-htree/src/git/: error.rs  mod.rs  object.rs  refs.rs  storage.rs
crates/git-remote-htree/tests/: basic.rs  diff_push.rs  git_roundtrip.rs  nff_push.rs  p2p_git.rs  production.rs  server_coverage.rs  visibility.rs
crates/git-remote-htree/tests/common/: mod.rs
crates/git-remote-nostr/: Cargo.toml
crates/git-remote-nostr/src/: helper.rs  nostr_client.rs
crates/hashtree/: Cargo.toml
crates/hashtree-bep52/: Cargo.toml
crates/hashtree-bep52/benches/: bep52_bench.rs
crates/hashtree-bep52/src/: builder.rs  lib.rs  merkle.rs  store.rs
crates/hashtree-blossom/: Cargo.toml  README.md
crates/hashtree-blossom/src/: lib.rs
crates/hashtree-cli/: Cargo.toml  README.md
crates/hashtree-cli/src/: config.rs  fetch.rs  git_remote.rs  lib.rs  main.rs  resolver.rs  service.rs  storage.rs  sync.rs  webrtc_stub.rs
crates/hashtree-cli/src/server/: auth.rs  blossom.rs  data_ws.rs  git.rs  handlers.rs  mod.rs  ui.rs
crates/hashtree-cli/src/webrtc/: mod.rs  peer.rs  signaling.rs  tests.rs  types.rs
crates/hashtree-cli/tests/: blossom_access.rs  crosslang_peer.rs  eviction.rs  two_instances.rs
crates/hashtree-config/: Cargo.toml  README.md
crates/hashtree-config/src/: lib.rs
crates/hashtree-core/: Cargo.toml  README.md
crates/hashtree-core/benches/: builder.rs
crates/hashtree-core/src/: builder.rs  codec.rs  diff.rs  hashtree.rs  lib.rs  nhash.rs  reader.rs  store.rs  types.rs
crates/hashtree-core/tests/: hashtree.rs  interop.rs  streaming.rs
crates/hashtree-fs/: Cargo.toml  README.md
crates/hashtree-fs/benches/: fs_vs_lmdb.rs
crates/hashtree-fs/src/: lib.rs
crates/hashtree-git/: Cargo.toml
crates/hashtree-git/src/: http.rs  lib.rs  storage.rs
crates/hashtree-lmdb/: Cargo.toml  README.md
crates/hashtree-lmdb/src/: lib.rs
crates/hashtree-nostr/: Cargo.toml
crates/hashtree-nostr/src/: crawler.rs  lib.rs  outbound.rs
crates/hashtree-nostrdb/: Cargo.toml
crates/hashtree-nostrdb/nostrdb/: .gitignore
crates/hashtree-nostrdb/src/: metadata.rs
crates/hashtree-nostrdb/tests/: socialgraph_test.rs
crates/hashtree-relay/: Cargo.toml
crates/hashtree-relay/src/: crawler.rs  outbound.rs  server.rs
crates/hashtree-resolver/: Cargo.toml  README.md
crates/hashtree-resolver/src/: lib.rs  nostr.rs  traits.rs
crates/hashtree-s3/: Cargo.toml  README.md
crates/hashtree-s3/src/: lib.rs
crates/hashtree-sim/: Cargo.toml  README.md
crates/hashtree-sim/benches/: network.rs
crates/hashtree-sim/examples/: connectivity_test.rs  large_bench.rs  latency_test.rs  quick_sim.rs  run_simulation.rs  topology_test.rs
crates/hashtree-sim/src/: adapter.rs  agent.rs  behavior.rs  channel.rs  config.rs  flooding.rs  lib.rs  message.rs  metrics.rs  network.rs  node.rs  peer_agent.rs  peer_selector.rs  relay.rs  sequential.rs  simulation.rs  store.rs  webrtc_sim.rs  ws_relay.rs
crates/hashtree-webrtc/: Cargo.toml  README.md
crates/hashtree-webrtc/src/: channel.rs  generic_store.rs  lib.rs  mock.rs  nostr.rs  peer.rs  peer_selector.rs  protocol.rs  real_factory.rs  signaling.rs  store.rs  transport.rs  types.rs
crates/hashtree-webrtc/tests/: integration.rs  types.rs
crates/hashtree/benches/: builder.rs
crates/hashtree/src/: builder.rs  codec.rs  crypto.rs  encrypted.rs  hash.rs  hashtree.rs  lib.rs  reader.rs  store.rs  types.rs
crates/hashtree/tests/: hashtree.rs  interop-vectors.json  interop.rs  streaming.rs
scripts/: install-systemd.sh  publish.sh
tests/: integration_two_instances.sh
