[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/irislib/hashtree-rs"
homepage = "https://github.com/irislib/hashtree-rs"
authors = ["Martti Malmi <mmalmi@gmail.com>"]

[workspace.dependencies]
# Core
sha2 = "0.10"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
async-trait = "0.1"
thiserror = "1.0"

# WebRTC transport
webrtc = "0.11"
nostr-sdk = "0.35"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }

# Internal
hashtree-core = { path = "crates/hashtree" }
hashtree-lmdb = { path = "crates/hashtree-lmdb" }
hashtree-nostr = { path = "crates/hashtree-nostr" }
hashtree-git = { path = "crates/hashtree-git" }

# Storage
heed = "0.20"
tempfile = "3"

# HTTP/Web
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Nostr
nostr = { version = "0.37", features = ["nip44"] }
nostrdb = { git = "https://github.com/mmalmi/nostrdb-rs" }
enostr = { git = "https://github.com/mmalmi/notedeck" }

# Utilities
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "env"] }
bytes = "1.0"
toml = "0.8"
lru = "0.12"
