[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/mmalmi/hashtree-rs"
homepage = "https://github.com/mmalmi/hashtree-rs"
authors = ["Martti Malmi <mmalmi@gmail.com>"]

[workspace.dependencies]
# Core
sha2 = "0.10"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
async-trait = "0.1"
thiserror = "1.0"

# WebRTC transport
webrtc = "0.11"
nostr-sdk = { version = "0.35", default-features = false, features = ["nip44"] }
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }

# Internal (path for local dev, version for publishing)
hashtree-core = { path = "crates/hashtree", version = "0.1.2" }
hashtree-lmdb = { path = "crates/hashtree-lmdb", version = "0.1.2" }
hashtree-git = { path = "crates/hashtree-git", version = "0.1.2" }
hashtree-s3 = { path = "crates/hashtree-s3", version = "0.1.2" }
hashtree-blossom = { path = "crates/hashtree-blossom", version = "0.1.2" }
hashtree-sim = { path = "crates/hashtree-sim", version = "0.1.2" }
hashtree-resolver = { path = "crates/hashtree-resolver", version = "0.1.2" }
hashtree-config = { path = "crates/hashtree-config", version = "0.1.2" }

# AWS S3
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }

# Storage
heed = "0.20"
tempfile = "3"

# HTTP/Web
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Nostr
nostr = { version = "0.37", features = ["nip44"] }

# Utilities
anyhow = "1"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "env"] }
bytes = "1.0"
toml = "0.8"
lru = "0.12"
