[package]
name = "git-remote-htree"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Git remote helper for hashtree - push/pull git repos via nostr and hashtree"

[[bin]]
name = "git-remote-htree"
path = "src/main.rs"

[dependencies]
# Git protocol
hashtree-git.workspace = true

# Content-addressed storage
hashtree-core.workspace = true
hashtree-lmdb.workspace = true
dirs = "5"

# Nostr
nostr.workspace = true
nostr-sdk.workspace = true
secp256k1 = { version = "0.29", features = ["global-context"] }

# Blossom client
hashtree-blossom = { workspace = true, features = ["store"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde.workspace = true
serde_json.workspace = true
toml = "0.8"

# Utilities
anyhow.workspace = true
hex.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI
clap.workspace = true

[dev-dependencies]
tempfile.workspace = true
