[package]
name = "hashtree-blossom"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Blossom protocol client for hashtree - upload/download blobs with NIP-98 auth"

[dependencies]
# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Nostr for auth signing (must match nostr-sdk's version)
nostr = "0.35"

# Async
tokio = { version = "1", features = ["time"] }

# Crypto
sha2.workspace = true

# Utils
hex.workspace = true
thiserror.workspace = true
tracing = "0.1"
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }
