[package]
name = "hashtree-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Hashtree daemon and CLI - content-addressed storage with P2P sync"
default-run = "htree"

[[bin]]
name = "htree"
path = "src/main.rs"

[dependencies]
# Core hashtree crates
hashtree-core.workspace = true
hashtree-lmdb.workspace = true
hashtree-nostr.workspace = true
hashtree-git.workspace = true
hashtree-resolver = { path = "../hashtree-resolver", features = ["nostr"] }

# AWS S3 (optional)
aws-sdk-s3 = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }

# Storage
heed.workspace = true
tempfile.workspace = true

# HTTP/Web
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Nostr
nostr.workspace = true
nostr-sdk.workspace = true
hashtree-nostrdb.workspace = true

# WebRTC
webrtc = "0.11"
webrtc-stun = "0.1"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures = "0.3"

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_bytes = "0.11"
rmp-serde = "1.3"

# Utilities
anyhow.workspace = true
thiserror.workspace = true
hex.workspace = true
sha2.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
base64 = "0.22"
rand = "0.8"
secp256k1 = { version = "0.29", features = ["global-context"] }
lru.workspace = true

# CLI
clap.workspace = true
dirs = "5"
toml.workspace = true
ignore = "0.4"

# HTTP client for Blossom
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# TLS crypto provider
rustls = { version = "0.23", features = ["ring"] }

[features]
default = []
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]

[dev-dependencies]
tempfile.workspace = true
walkdir = "2"
nostr.workspace = true
serde_json.workspace = true
