[package]
name = "hashtree-git"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Git smart HTTP protocol implementation for hashtree"

[dependencies]
# Hashtree storage
hashtree-core.workspace = true
hashtree-lmdb.workspace = true

# Async runtime
tokio = { version = "1", features = ["full"] }
bytes.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true

# Utils
anyhow.workspace = true
sha1 = "0.10"
sha2.workspace = true
hex.workspace = true
flate2 = "1"
thiserror.workspace = true

[dev-dependencies]
git2 = "0.20"
tempfile.workspace = true
tokio-test = "0.4"
axum.workspace = true
tower.workspace = true
hyper = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
