[package]
name = "hashtree-lmdb"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LMDB-backed content-addressed blob storage for hashtree"

[dependencies]
hashtree.workspace = true
heed.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
