[package]
name = "hashtree-nostr"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Social graph and relay connections using nostrdb"

[dependencies]
# Core
nostrdb = { package = "hashtree-nostrdb", path = "../hashtree-nostrdb" }
nostr-sdk = "0.35"

# Async
tokio = { version = "1", features = ["sync", "time", "rt", "rt-multi-thread"] }
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
hex.workspace = true

# Utilities
anyhow = "1"
tracing = "0.1"

[dev-dependencies]
tempfile.workspace = true
tokio = { version = "1", features = ["full", "test-util"] }
