[package]
name = "hashtree-nostrdb"
version.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later"
repository.workspace = true
authors = ["William Casarin <jb55@jb55.com>", "Martti Malmi <mmalmi@gmail.com>"]
description = "Nostrdb with social graph support - fork for hashtree"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "nostrdb/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "bindings.h",
]

[build-dependencies]
cc = "1.0"
bindgen = "0.69.1"

[features]
bindgen = []

[dependencies]
flatbuffers = "23.5.26"
libc = "0.2.151"
thiserror = "2.0.7"
futures = "0.3.31"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1.40"

[dev-dependencies]
hex = "0.4.3"
