[package]
name = "hashtree-resolver"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Root resolver for hashtree - maps human-readable keys to merkle root hashes"

[dependencies]
hashtree = { path = "../hashtree" }
async-trait.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }

# Nostr resolver
nostr-sdk = { workspace = true, optional = true }

[features]
default = []
nostr = ["nostr-sdk"]
# Note: encryption feature requires hashtree to export {encrypt, decrypt, key_from_hex, key_to_hex}
encryption = []
