[package]
name = "hashtree-s3"
version = "0.1.0"
edition = "2021"
description = "S3 storage backend for hashtree with non-blocking uploads"
license = "MIT"

[dependencies]
hashtree-core = { path = "../hashtree" }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt", "time"] }
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
tracing = "0.1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
