[package]
name = "hashtree-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Simulation tools for hashtree P2P protocols"

[dependencies]
# Core hashtree crate
hashtree = { path = "../hashtree" }

# Core
async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Simulation
rand = "0.8"
lru = "0.12"
lazy_static = "1.4"
rmp-serde = "1"
serde_bytes = "0.11"

# Async runtime
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync", "macros", "time"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "network"
harness = false
